--- a/frontend/src/style/components/button.styl
+++ b/frontend/src/style/components/button.styl
@@ -8,11 +8,12 @@
   border 2px solid #1ECD97
   color #1ECD97
   letter-spacing 1px
-  font-size 12px
-  font-weight bold
+  font-size 16px
   cursor pointer
   transition all 0.25s ease
-
+  margin-left auto
+  margin-right: auto;
+  margin-top 35px
   &:hover
     color white;
     background #1ECD97
