--- a/frontend/src/style/components/input.styl
+++ b/frontend/src/style/components/input.styl
@@ -1,18 +1,35 @@
-.form__group
-  display flex
-  flex-direction column-reverse
+.form__group + .form__group
+  margin-top 15px
 
-.form__input
-  width 250px
-  height 30px
-  z-index 2
-  background transparent
-
-.form__label
-  transform translate(10px, 25px)
-  transition all 0.6s ease-in-out
-  z-index 1
+.form
+  &__group
+    display flex
+    flex-direction column-reverse
+    height 50px
+  &__label
+    transform translate(3px, 25px)
+    transition all 0.3s ease-in-out
+    z-index 1
+    font-size 17px
+    color rgba(16,24,40,0.7)
+    &--active
+      transform translate(3px, 0px)
+      transition all 0.3s ease-in-out
+      font-size 15px
+      color #192535
+  &__input
+    height 30px
+    z-index 2
+    background transparent
+    border 0
+    border-bottom 2px solid #ccc
+    outline none
+    font-size 17px
+    color #192535
+    padding-left 3px
 
 .form__input:focus + .form__label
-  transform translate(10px, 0px)
-  transition all 0.6s ease-in-out
+  transform translate(3px, 0px)
+  transition all 0.3s ease-in-out
+  font-size 15px
+  color #192535
