--- a/frontend/src/style/components/input.styl
+++ b/frontend/src/style/components/input.styl
@@ -27,6 +27,8 @@
     font-size 17px
     color #192535
     padding-left 3px
+    &-error
+      border-bottom 2px solid crimson
 
 .form__input:focus + .form__label
   transform translate(3px, 0px)
