--- a/frontend/src/style/components/input.styl
+++ b/frontend/src/style/components/input.styl
@@ -27,8 +27,13 @@
     font-size 17px
     color #192535
     padding-left 3px
+    transition 0.3s all ease-in-out
     &-error
+      transition 0.3s all ease-in-out
       border-bottom 2px solid crimson
+    &-check
+      transition 0.3s all ease-in-out
+      border-bottom 2px solid #1ecd97
 
 .form__input:focus + .form__label
   transform translate(3px, 0px)
