--- a/frontend/src/style/components/account_profile.styl
+++ b/frontend/src/style/components/account_profile.styl
@@ -16,6 +16,13 @@
     margin-right 15px
   &__container
     margin-top 5px
+    width calc(100vw - 582px)
+    margin-right 20px
+  &__icons
+    display flex
+    flex-direction column
+    margin-top 15px
+    margin-bottom: 15px;
 
 .profile__info+.profile__info
   margin-top 5px
