--- a/frontend/src/style/components/account_profile.styl
+++ b/frontend/src/style/components/account_profile.styl
@@ -7,6 +7,9 @@
   height 155px
   width calc(100vw - 400px)
 
+  &__user
+    flex-direction column
+
   &__block
     margin-right 15px
 
@@ -51,3 +54,7 @@
 
   &__active
     display flex !important
+
+
+.profile__form .form__group+.form__group
+  margin-top 3px
